--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos no Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Ler 1 livro para o ENEM</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em javaScript</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Criar um jogo multiplayer</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com meus certificados da Alura
+                    <h3 class="aba-conteudo-titulo-principal">Imprimir meus curriculo com meus certificados da Alura
                     </h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
