--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Imprimir meus curriculo com meus certificados da Alura
+                    <h3 class="aba-conteudo-titulo-principal">Imprimir meus curriculos com meus certificados da Alura
                     </h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
