--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Ler um livro</button>
+                <button class="botao ativo">Agrinho</button>
                 <button class="botao">Criar um jogo</button>
                 <button class="botao">Criar um portfólio</button>
                 <button class="botao">Imprimir meus curículos</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Ler 1 livro para o ENEM</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Agrinho</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Acaba o tempo para inscrições dos projetos para o Agrinho</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
